--- a/templates/admins/news.html
+++ b/templates/admins/news.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+{% extends "admins/base.html" %}
+
+
+{% block css %}
     <style>
         .container {
             margin: 2%;
@@ -13,141 +12,112 @@
             text-align: center;
         }
     </style>
-</head>
-<body>
+{% endblock %}
+
+{% block main %}
+    <div class="container">
 
 
-<div class="container">
+        <FORM id="customerForm" name="customerForm"
+              action="${pageContext.request.contextPath }/linkmanServlet?method=list"
+              method=post>
+        {% csrf_token %}
 
-    {#    <table border="1">#}
-    {#        <tbody>#}
-    {#            <tr>#}
-    {#                <th>序号</th>#}
-    {#                <th>时间</th>#}
-    {#                <th>创建者</th>#}
-    {#                <th>主题</th>#}
-    {#                <th colspan="2">操作</th>#}
-    {##}
-    {#            </tr>#}
-    {##}
-    {#            <tr>#}
-    {#                <td>1</td>#}
-    {#                <td>2018-08-08 11:22:00</td>#}
-    {#                <td>alex</td>#}
-    {#                <td>测试内容</td>#}
-    {#                <td>修改</td>#}
-    {#                <td>删除</td>#}
-    {##}
-    {#            </tr>#}
-    {##}
-    {#        </tbody>#}
-    {#    </table>#}
+            <TABLE cellSpacing=0 cellPadding=0 width="98%" border=0>
+                <TBODY>
+                <TR>
 
+                    <TABLE borderColor=#cccccc cellSpacing=0 cellPadding=0
+                           width="100%" align=center border=0>
+                        <TBODY>
+                        <TR>
+                            <TD height=25>
+                                <TABLE cellSpacing=0 cellPadding=2 border=0>
+                                    <TBODY>
+                                    <TR>
+                                        <TD>联系人名称：</TD>
+                                        <TD><INPUT class=textbox id=sChannel2
+                                                   style="WIDTH: 80px" maxLength=50 name="lkmName"></TD>
 
-    <FORM id="customerForm" name="customerForm"
-          action="${pageContext.request.contextPath }/linkmanServlet?method=list"
-          method=post>
-
-        <TABLE cellSpacing=0 cellPadding=0 width="98%" border=0>
-            <TBODY>
-            <TR>
-
-                <TABLE borderColor=#cccccc cellSpacing=0 cellPadding=0
-                       width="100%" align=center border=0>
-                    <TBODY>
-                    <TR>
-                        <TD height=25>
-                            <TABLE cellSpacing=0 cellPadding=2 border=0>
-                                <TBODY>
-                                <TR>
-                                    <TD>联系人名称：</TD>
-                                    <TD><INPUT class=textbox id=sChannel2
-                                               style="WIDTH: 80px" maxLength=50 name="lkmName"></TD>
-
-                                    <TD><INPUT class=button id=sButton2 type=submit
-                                               value=" 筛选 " name=sButton2></TD>
-                                </TR>
-                                </TBODY>
-                            </TABLE>
-                        </TD>
-                    </TR>
-
-                    <TR>
-                        <TD>
-                            <TABLE id=grid
-                                   style="BORDER-TOP-WIDTH: 0px; FONT-WEIGHT: normal; BORDER-LEFT-WIDTH: 0px; BORDER-LEFT-COLOR: #cccccc; BORDER-BOTTOM-WIDTH: 0px; BORDER-BOTTOM-COLOR: #cccccc; WIDTH: 100%; BORDER-TOP-COLOR: #cccccc; FONT-STYLE: normal; BACKGROUND-COLOR: #cccccc; BORDER-RIGHT-WIDTH: 0px; TEXT-DECORATION: none; BORDER-RIGHT-COLOR: #cccccc"
-                                   cellSpacing=1 cellPadding=2 rules=all border=0>
-                                <TBODY>
-                                <TR
-                                        style="FONT-WEIGHT: bold; FONT-STYLE: normal; BACKGROUND-COLOR: #eeeeee; TEXT-DECORATION: none">
-                                    <TD style="width: 10%">创建用户</TD>
-                                    <TD style="width: 20%">创建时间</TD>
-                                    <TD style="width: 50%">标题</TD>
-                                    <TD style="width: 20%">操作</TD>
-                                </TR>
-
-                                {# 开始循环新闻#}
-                                {% for n in news %}
-                                    <TR style="FONT-WEIGHT: normal; FONT-STYLE: normal; BACKGROUND-COLOR: white; TEXT-DECORATION: none">
-                                        <TD>{{ n.user }}</TD>
-                                        <TD>{{ n.create_date }}</TD>
-                                        <TD>{{ n.title }}</TD>
-                                        <TD>
-                                            <a href="#">修改</a>
-                                            &nbsp;&nbsp;
-                                            <a href="#">删除</a>
-                                        </TD>
+                                        <TD><INPUT class="button" id="sButton2" type="submit"
+                                                   value=" 筛选 " name=sButton2></TD>
+                                        <TD><INPUT class="button" id="addNews" type="button"
+                                                   value=" 添加新闻 " name=sButton2></TD>
                                     </TR>
-                                {% endfor %}
+                                    </TBODY>
+                                </TABLE>
+                            </TD>
+                        </TR>
+
+                        <TR>
+                            <TD>
+                                <TABLE id=grid
+                                       style="BORDER-TOP-WIDTH: 0px; FONT-WEIGHT: normal; BORDER-LEFT-WIDTH: 0px; BORDER-LEFT-COLOR: #cccccc; BORDER-BOTTOM-WIDTH: 0px; BORDER-BOTTOM-COLOR: #cccccc; WIDTH: 100%; BORDER-TOP-COLOR: #cccccc; FONT-STYLE: normal; BACKGROUND-COLOR: #cccccc; BORDER-RIGHT-WIDTH: 0px; TEXT-DECORATION: none; BORDER-RIGHT-COLOR: #cccccc"
+                                       cellSpacing=1 cellPadding=2 rules=all border=0>
+                                    <TBODY>
+                                    <TR
+                                            style="FONT-WEIGHT: bold; FONT-STYLE: normal; BACKGROUND-COLOR: #eeeeee; TEXT-DECORATION: none">
+                                        <TD style="width: 10%">创建用户</TD>
+                                        <TD style="width: 20%">创建时间</TD>
+                                        <TD style="width: 50%">标题</TD>
+                                        <TD style="width: 20%">操作</TD>
+                                    </TR>
+
+                                    {# 开始循环新闻#}
+                                    {% for n in news %}
+                                        <TR style="FONT-WEIGHT: normal; FONT-STYLE: normal; BACKGROUND-COLOR: white; TEXT-DECORATION: none">
+                                            <TD>{{ n.user }}</TD>
+                                            <TD>{{ n.create_date }}</TD>
+                                            <TD>{{ n.title }}</TD>
+                                            <TD>
+                                                <a href="#">修改</a>
+                                                &nbsp;&nbsp;
+                                                <a href="#">删除</a>
+                                            </TD>
+                                        </TR>
+                                    {% endfor %}
 
 
-                                </TBODY>
-                            </TABLE>
-                        </TD>
-                    </TR>
-                    {# 分页开始 #}
-{#                    <TR >#}
-{#                        <TD><SPAN id=pagelink style="padding-top: 10px;">#}
-{#											<DIV#}
-{#                                                    style="LINE-HEIGHT: 20px; HEIGHT: 20px; TEXT-ALIGN: right">#}
-{#												共[<B>${total}</B>]条记录,[<B>${totalPage}</B>]页#}
-{#												,每页显示#}
-{#												<select name="pageSize">#}
-{##}
-{#												<option value="1" <c:if#}
-{#                                                        test="${pageSize==1 }">selected</c:if>>1</option>#}
-{#                                                    <option value="30" <c:if#}
-{#                                                        test="${pageSize==30 }">selected</c:if>>30</option>#}
-{#												</select>#}
-{#												条#}
-{#												[<A href="javascript:to_page(${page-1})">前一页</A>]#}
-{#												<B>${page}</B>#}
-{#												[<A href="javascript:to_page(${page+1})">后一页</A>]#}
-{#												到#}
-{#												<input type="text" size="3" id="page" name="page"/>#}
-{#												页#}
-{##}
-{#												<input type="button" value="Go" onclick="to_page()"/>#}
-{#											</DIV>#}
-{#									</SPAN></TD>#}
-{#                    </TR>#}
-                    {# 分页结束 #}
-                    </TBODY>
-                </TABLE>
-                </TD>
-            </TR>
-            </TBODY>
-        </TABLE>
+                                    </TBODY>
+                                </TABLE>
+                            </TD>
+                        </TR>
+                        {# 分页开始 #}
+                        {#                    <TR >#}
+                        {#                        <TD><SPAN id=pagelink style="padding-top: 10px;">#}
+                        {#											<DIV#}
+                        {#                                                    style="LINE-HEIGHT: 20px; HEIGHT: 20px; TEXT-ALIGN: right">#}
+                        {#												共[<B>${total}</B>]条记录,[<B>${totalPage}</B>]页#}
+                        {#												,每页显示#}
+                        {#												<select name="pageSize">#}
+                        {##}
+                        {#												<option value="1" <c:if#}
+                        {#                                                        test="${pageSize==1 }">selected</c:if>>1</option>#}
+                        {#                                                    <option value="30" <c:if#}
+                        {#                                                        test="${pageSize==30 }">selected</c:if>>30</option>#}
+                        {#												</select>#}
+                        {#												条#}
+                        {#												[<A href="javascript:to_page(${page-1})">前一页</A>]#}
+                        {#												<B>${page}</B>#}
+                        {#												[<A href="javascript:to_page(${page+1})">后一页</A>]#}
+                        {#												到#}
+                        {#												<input type="text" size="3" id="page" name="page"/>#}
+                        {#												页#}
+                        {##}
+                        {#												<input type="button" value="Go" onclick="to_page()"/>#}
+                        {#											</DIV>#}
+                        {#									</SPAN></TD>#}
+                        {#                    </TR>#}
+                        {# 分页结束 #}
+                        </TBODY>
+                    </TABLE>
+                    </TD>
+                </TR>
+                </TBODY>
+            </TABLE>
 
-    </FORM>
+        </FORM>
+    </div>
 
-</div>
+{% endblock %}
 
-
-<div id="news">
-
-
-</div>
-
-</body>
-</html>
