--- a/templates/admins/news/add.html
+++ b/templates/admins/news/add.html
@@ -1,5 +1,7 @@
 {% extends "admins/index.html" %}
 
 {% block main %}
-    add news
+    <div class="container">
+        add news
+    </div>
 {% endblock %}
