--- a/templates/admins/index.html
+++ b/templates/admins/index.html
@@ -1,12 +1,17 @@
 {% extends "admins/base.html" %}
 
-{% block company %}
-    消安
-{% endblock %}
+{% block method %}{% endblock %}
+{% block module %}HOME{% endblock %}
+
 {% block username %}
     alex
 {% endblock %}
 
 {% block main %}
-    index main
+    <div class="icontainer">
+        <div style="align-items: center; justify-items: center">
+            <h3>欢迎使用消安后台管理系统，请点击左侧菜单开始使用。</h3>
+        </div>
+
+    </div>
 {% endblock %}
