--- a/templates/admins/base.html
+++ b/templates/admins/base.html
@@ -10,6 +10,7 @@
     {% block css %}
     {% endblock %}
     <script type="text/javascript" src="{% static 'admins/js/jquery-1.8.3.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'admins/js/ajaxfileupload.js' %}"></script>
     <script type="text/javascript" src="{% static 'admins/js/menu.js' %}"></script>
     <script type="text/javascript" src="{% static 'admins/js/ijs.js' %}"></script>
     {% block javascript %}
