--- a/templates/admins/news/add.html
+++ b/templates/admins/news/add.html
@@ -1,7 +1,7 @@
 {% extends "admins/index.html" %}
 
 {% block module %}
-    内容管理
+    新闻管理
 {% endblock %}
 
 {% block method %}
@@ -15,13 +15,13 @@
             <table class="news-add-table" border="0" cellpadding="5" cellspacing="0">
                 <tr>
                     <td>新闻标题:</td>
-                    <td><input required name="title" type="text" style="width: 800px;"></td>
+                    <td><input required name="title" type="text" style="width: 650px;"></td>
                 </tr>
 
                 <tr>
                     <td>新闻内容:</td>
                     <td>
-                        <textarea required name="content" style="width: 800px;height:200px;overflow:scroll;resize:none;"></textarea>
+                        <textarea required name="content" style="width: 650px;height:200px;overflow:scroll;resize:none;"></textarea>
                     </td>
                 </tr>
                 <tr>
