--- a/templates/admins/news/modify.html
+++ b/templates/admins/news/modify.html
@@ -7,21 +7,22 @@
             {% csrf_token %}
             <table class="news-add-table" border="0" cellpadding="5" cellspacing="0">
                 <tr>
-                    <td>新闻标题:</td>
-                    <td><input required value="{{ modifyNews.title }}" name="title" type="text" style="width: 800px;">
+                    <td >新闻标题:</td>
+                    <td>
+                        <input required value="{{ modifyNews.title }}" name="title" type="text" style="width: 650px;">
                     </td>
                 </tr>
 
                 <tr>
                     <td>新闻图片：</td>
                     <td style="text-align: left">
-                        <img id="newsPhoto" name="newsPhoto" src="{% static 'images/news/' %}news1.jpg" width="300" height="300"/>
+                        <img id="newsPhoto" name="newsPhoto" src="{% static 'images/news/' %}{{ modifyNews.news_photo.file_name }}" width="300" height="300"/>
 
                     </td>
                 </tr>
-                <tr style="text-align: left">
-                    <td>图片操作</td>
-                    <td>
+                <tr >
+                    <td>图片操作:</td>
+                    <td style="text-align: left">
                         <input id="uploadInput" name="uploadInput" type="file" value="上传图片">
                         <input type="button" value="选择已上传图片">
                         <input type="hidden" id="hidFilename" name="hidFilename">
@@ -33,7 +34,7 @@
                     <td>新闻内容:</td>
                     <td>
                         <textarea required name="content"
-                                  style="width: 800px;height:200px;overflow:scroll;resize:none;">{{ modifyNews.content }}</textarea>
+                                  style="width: 650px;height:200px;overflow:scroll;resize:none;">{{ modifyNews.content }}</textarea>
                     </td>
                 </tr>
                 <tr>
@@ -45,5 +46,6 @@
 
             </table>
         </form>
+
     </div>
 {% endblock %}
