--- a/templates/basehtml.html
+++ b/templates/basehtml.html
@@ -8,6 +8,7 @@
     <title>{% block title %}{{ com_name }}{% endblock %}</title>
 
 <link href="{% static 'css/style.css' %}" rel=stylesheet>
+<link type="text/css" rel=stylesheet href="{% static 'admins/css/icss.css' %}">
 <script type="text/javascript" src="{% static 'js/jquery-1.7.2.min.js' %}"></script>
 <script src="{% static 'js/main.js' %}" type="text/javascript"></script>
 <script type="text/javascript" src="{% static 'js/index_brand.js' %}"></script>
