--- a/templates/index.html
+++ b/templates/index.html
@@ -76,11 +76,12 @@
 
     <div class="banner">
         <ul class="slides">
-            {#		<li style="background:url({% static 'images/banner1.jpg' %}) 50% 0 no-repeat; height:550px"></li>#}
-            {#		<li style="background:url({% static 'images/banner2.jpg' %}) 50% 0 no-repeat; height:550px"></li>#}
-            <li style="background:url('https://test-1255578425.cos.ap-shanghai.myqcloud.com/images/bannernew1.jpg?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDEqhOjukm6u3xTa0KXthooWRiqp52fTdD%26q-sign-time%3D1528185942%3B1528187742%26q-key-time%3D1528185942%3B1528187742%26q-header-list%3D%26q-url-param-list%3D%26q-signature%3Decdc378fc94972eb4f09033e798e25f15a39cb6a&token=3b30396b336ca3654c13c9954d018147651f385e10001&clientIP=122.97.178.94&clientUA=5acdb231-edb0-49f4-b988-4dee98456bd6') 50% 0 no-repeat; height:550px"></li>
-            <li style="background:url('https://test-1255578425.cos.ap-shanghai.myqcloud.com/images/bannernew2.jpg?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDQ9xjLeP1oQVF3wXkTUwfbxOKjg9zOpDf%26q-sign-time%3D1528186833%3B1528188633%26q-key-time%3D1528186833%3B1528188633%26q-header-list%3D%26q-url-param-list%3D%26q-signature%3D5cadb1602ffe93cda2796429cf09c2310692176a&token=cd1409294889fe3d1accb2e9671e6c9fcf2b0bb310001&clientIP=122.97.178.94&clientUA=bf2fecdb-0dc3-4e76-8ba1-668258070c94') 50% 0 no-repeat; height:550px"></li>
-            <li style="background:url('https://test-1255578425.cos.ap-shanghai.myqcloud.com/images/bannernew3.jpg?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDORR54xRZTiPC39VwPkOORHaLbu9kZq0i%26q-sign-time%3D1528186867%3B1528188667%26q-key-time%3D1528186867%3B1528188667%26q-header-list%3D%26q-url-param-list%3D%26q-signature%3D72eaf43ec6fc69793fed202a535de6794cf5a1c0&token=64c58bbed731c8c72b96003a37c94f72a0ecb5f710001&clientIP=122.97.178.94&clientUA=c2b3ec02-b0b3-4cd5-9aa4-d4a123c5ff29') 50% 0 no-repeat; height:550px"></li>
+            <li style="background:url({% static 'images/xuanchuan/banner1.jpeg' %}) 50% 0 no-repeat; height:550px"></li>
+            <li style="background:url({% static 'images/xuanchuan/banner3.jpeg' %}) 50% 0 no-repeat; height:550px"></li>
+            <li style="background:url({% static 'images/xuanchuan/banner4.jpeg' %}) 50% 0 no-repeat; height:550px"></li>
+            {#            <li style="background:url('https://test-1255578425.cos.ap-shanghai.myqcloud.com/images/bannernew1.jpg?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDEqhOjukm6u3xTa0KXthooWRiqp52fTdD%26q-sign-time%3D1528185942%3B1528187742%26q-key-time%3D1528185942%3B1528187742%26q-header-list%3D%26q-url-param-list%3D%26q-signature%3Decdc378fc94972eb4f09033e798e25f15a39cb6a&token=3b30396b336ca3654c13c9954d018147651f385e10001&clientIP=122.97.178.94&clientUA=5acdb231-edb0-49f4-b988-4dee98456bd6') 50% 0 no-repeat; height:550px"></li>#}
+            {#            <li style="background:url('https://test-1255578425.cos.ap-shanghai.myqcloud.com/images/bannernew2.jpg?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDQ9xjLeP1oQVF3wXkTUwfbxOKjg9zOpDf%26q-sign-time%3D1528186833%3B1528188633%26q-key-time%3D1528186833%3B1528188633%26q-header-list%3D%26q-url-param-list%3D%26q-signature%3D5cadb1602ffe93cda2796429cf09c2310692176a&token=cd1409294889fe3d1accb2e9671e6c9fcf2b0bb310001&clientIP=122.97.178.94&clientUA=bf2fecdb-0dc3-4e76-8ba1-668258070c94') 50% 0 no-repeat; height:550px"></li>#}
+            {#            <li style="background:url('https://test-1255578425.cos.ap-shanghai.myqcloud.com/images/bannernew3.jpg?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDORR54xRZTiPC39VwPkOORHaLbu9kZq0i%26q-sign-time%3D1528186867%3B1528188667%26q-key-time%3D1528186867%3B1528188667%26q-header-list%3D%26q-url-param-list%3D%26q-signature%3D72eaf43ec6fc69793fed202a535de6794cf5a1c0&token=64c58bbed731c8c72b96003a37c94f72a0ecb5f710001&clientIP=122.97.178.94&clientUA=c2b3ec02-b0b3-4cd5-9aa4-d4a123c5ff29') 50% 0 no-repeat; height:550px"></li>#}
         </ul>
     </div>
     <script src="{% static 'js/jquery.flexslider-min.js' %}"></script>
@@ -123,18 +124,18 @@
             {#       <div class="scrollable ">#}
             <ul class="piccon">
                 <li><a href="/rongyu/?id=1" rel="{% static 'images/certificate/certificate1 - 副本.jpg' %}" class=""><img
-                    src="{% static 'images/certificate/certificate1 - 副本.jpg' %}" alt="画廊缩略图" width="200"
-                    height="275"/></a></li>
+                        src="{% static 'images/certificate/certificate1 - 副本.jpg' %}" alt="画廊缩略图" width="200"
+                        height="275"/></a></li>
 
                 <li><a href="/rongyu/?id=2" rel="{% static 'images/certificate/certificate2 - 副本.jpg' %}" class=""><img
-                    src="{% static 'images/certificate/certificate2 - 副本.jpg' %}" alt="画廊缩略图" width="200"
-                    height="275"/></a></li>
+                        src="{% static 'images/certificate/certificate2 - 副本.jpg' %}" alt="画廊缩略图" width="200"
+                        height="275"/></a></li>
                 <li><a href="/rongyu/?id=3" rel="{% static 'images/certificate/certificate3 - 副本.jpg' %}" class=""><img
-                    src="{% static 'images/certificate/certificate3 - 副本.jpg' %}" alt="画廊缩略图" width="200"
-                    height="275"/></a></li>
-{#                <li><a href="" rel="{% static 'images/certificate/certificate3 - 副本.jpg' %}" class="preview"><img#}
-{#                        src="{% static 'images/certificate/certificate3 - 副本.jpg' %}" alt="画廊缩略图" width="200"#}
-{#                        height="275"/></a></li>#}
+                        src="{% static 'images/certificate/certificate3 - 副本.jpg' %}" alt="画廊缩略图" width="200"
+                        height="275"/></a></li>
+                {#                <li><a href="" rel="{% static 'images/certificate/certificate3 - 副本.jpg' %}" class="preview"><img#}
+                {#                        src="{% static 'images/certificate/certificate3 - 副本.jpg' %}" alt="画廊缩略图" width="200"#}
+                {#                        height="275"/></a></li>#}
             </ul>
         </div>
     </div>
@@ -156,7 +157,7 @@
                 <ul class="pro">
                     {% for i in file_names %}
                         <li><img src="/static/images/xuanchuan/{{ i }}" width="250" height="192"/><span>精彩瞬间</span>
-{#                        <li><img src="/static/images/xuanchuan/{{ i }}" width="250" height="192" data-action="zoom" data-original="{% static '/images/xuanchuan/' %}{{ i }}" /><span>精彩瞬间</span>#}
+                            {#                        <li><img src="/static/images/xuanchuan/{{ i }}" width="250" height="192" data-action="zoom" data-original="{% static '/images/xuanchuan/' %}{{ i }}" /><span>精彩瞬间</span>#}
                         </li>
                         {#            	  <li><a href=""><img src="/static/images/xuanchuan/{{ i }}" width="250" height="192" /></a><span>物业管理物业管理11</span></li>#}
                     {% endfor %}
@@ -221,12 +222,18 @@
             </div>
         </div>
         <div class="scrollable ">
+            <div style="text-align: right; width: 97%; margin-bottom: 1px;">
+                <span style="font-size: 14px;">
+                    <a href="/caseDemo/">更多展示...</a>
+                </span>
+            </div>
             <ul>
                 {% for pic in caseShowPics %}
                     <li>
-{#                        <p><a href=""><img src="{% static 'images/caseshow/' %}{{ pic }}" width="250" height="192"/></a>#}
-{#                        </p>#}
-                        <img src="{% static 'images/caseshow/' %}{{ pic }}" width="250" height="192" data-action="zoom" data-original="{% static 'images/caseshow/' %}{{ pic }}" />
+                        {#                        <p><a href=""><img src="{% static 'images/caseshow/' %}{{ pic }}" width="250" height="192"/></a>#}
+                        {#                        </p>#}
+                        <img src="{% static 'images/caseshow/' %}{{ pic.file_name }}" width="250" height="192"
+                             data-action="zoom" data-original="{% static 'images/caseshow/' %}{{ pic.file_name }}"/>
                         <h2><a href=""></a></h2></li>
                     <li>
                 {% endfor %}
@@ -236,7 +243,7 @@
 
     </div>
 
-{#        <script type="text/javascript" src="{% static 'src/zooming.js' %}"></script>#}
+    {#        <script type="text/javascript" src="{% static 'src/zooming.js' %}"></script>#}
     </div>
 {% endblock %}
 
