--- a/templates/admins/base.html
+++ b/templates/admins/base.html
@@ -49,8 +49,10 @@
     <div class="navigation">
         <ul>
             <li>欢迎您！</li>
-            <li><a href="">{% block username %}{% endblock %}</a></li>
-            <li><a href="">退出</a></li>
+            <li><a href="javascript:void(0);">{% block username %}{% endblock %}</a></li>
+            {% block logout-Li-a %}
+            {% endblock %}
+{#            <li><a href="#">退出</a></li>#}
         </ul>
     </div>
 </div>
@@ -58,18 +60,30 @@
     <div class="left_menu">
         <ul id="nav_dot">
             <li>
-                <h4 class="M9"><span></span>案例管理</h4>
+                <h4 class="M6"><span></span>案例管理</h4>
                 <div class="list-item none">
                     <a href='/admins/caseDemo/'>图片设置</a>
                 </div>
+                <div class="list-item none">
+                    <a href='/admins/caseDemo/?m=uploadCasePicUI'>上传图片</a>
+                </div>
             </li>
             <li>
-                <h4 class="M8"><span></span>新闻管理</h4>
+                <h4 class="M1"><span></span>新闻管理</h4>
                 <div class="list-item none">
                     <a href='/admins/news/'>修改新闻</a>
                     <a href='/admins/news/addUI'>添加新闻</a>
                 </div>
             </li>
+            <li>
+                <h4 class="M7"><span></span>回收站</h4>
+                <div class="list-item none">
+                    <a href='/admins/recycle/pics'>最新删除图片</a>
+                </div>
+            </li>
+{#            {% for i in '123456789' %}#}
+{#                <h4 class="M{{ i }}"><span></span>回收站</h4>#}
+{#            {% endfor %}#}
 
         </ul>
     </div>
