--- a/templates/caseDemo/detail.html
+++ b/templates/caseDemo/detail.html
@@ -31,7 +31,8 @@
 
                 <div class="pic-wraper">
                     <div>
-                        <img src="{% static 'images/caseshow/' %}{{ pic.file_name }}" width="600px" height="500px"/>
+                        <img src="{% static 'images/caseshow/' %}{{ pic.file_name }}" width="800em" height="600em"/>
+{#                        <img src="{% static 'images/caseshow/' %}{{ pic.file_name }}" width="100%" height="100%"/>#}
                     </div>
 {#                    <div class="options">#}
 {#                        <span>模块置顶</span>#}
