--- a/templates/index.html
+++ b/templates/index.html
@@ -76,9 +76,9 @@
 
     <div class="banner">
         <ul class="slides">
-            <li style="background:url({% static 'images/xuanchuan/banner1.jpeg' %}) 50% 0 no-repeat; height:550px"></li>
-            <li style="background:url({% static 'images/xuanchuan/banner3.jpeg' %}) 50% 0 no-repeat; height:550px"></li>
-            <li style="background:url({% static 'images/xuanchuan/banner4.jpeg' %}) 50% 0 no-repeat; height:550px"></li>
+            <li style="background:url({% static 'images/banner/banner1.jpeg' %}) 50% 0 no-repeat; height:550px"></li>
+            <li style="background:url({% static 'images/banner/banner3.jpeg' %}) 50% 0 no-repeat; height:550px"></li>
+            <li style="background:url({% static 'images/banner/banner4.jpeg' %}) 50% 0 no-repeat; height:550px"></li>
             {#            <li style="background:url('https://test-1255578425.cos.ap-shanghai.myqcloud.com/images/bannernew1.jpg?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDEqhOjukm6u3xTa0KXthooWRiqp52fTdD%26q-sign-time%3D1528185942%3B1528187742%26q-key-time%3D1528185942%3B1528187742%26q-header-list%3D%26q-url-param-list%3D%26q-signature%3Decdc378fc94972eb4f09033e798e25f15a39cb6a&token=3b30396b336ca3654c13c9954d018147651f385e10001&clientIP=122.97.178.94&clientUA=5acdb231-edb0-49f4-b988-4dee98456bd6') 50% 0 no-repeat; height:550px"></li>#}
             {#            <li style="background:url('https://test-1255578425.cos.ap-shanghai.myqcloud.com/images/bannernew2.jpg?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDQ9xjLeP1oQVF3wXkTUwfbxOKjg9zOpDf%26q-sign-time%3D1528186833%3B1528188633%26q-key-time%3D1528186833%3B1528188633%26q-header-list%3D%26q-url-param-list%3D%26q-signature%3D5cadb1602ffe93cda2796429cf09c2310692176a&token=cd1409294889fe3d1accb2e9671e6c9fcf2b0bb310001&clientIP=122.97.178.94&clientUA=bf2fecdb-0dc3-4e76-8ba1-668258070c94') 50% 0 no-repeat; height:550px"></li>#}
             {#            <li style="background:url('https://test-1255578425.cos.ap-shanghai.myqcloud.com/images/bannernew3.jpg?sign=q-sign-algorithm%3Dsha1%26q-ak%3DAKIDORR54xRZTiPC39VwPkOORHaLbu9kZq0i%26q-sign-time%3D1528186867%3B1528188667%26q-key-time%3D1528186867%3B1528188667%26q-header-list%3D%26q-url-param-list%3D%26q-signature%3D72eaf43ec6fc69793fed202a535de6794cf5a1c0&token=64c58bbed731c8c72b96003a37c94f72a0ecb5f710001&clientIP=122.97.178.94&clientUA=c2b3ec02-b0b3-4cd5-9aa4-d4a123c5ff29') 50% 0 no-repeat; height:550px"></li>#}
