--- a/templates/admins/caseDemo/add.html
+++ b/templates/admins/caseDemo/add.html
@@ -21,7 +21,7 @@
                 <tr>
                     <td>案例图片：</td>
                     <td style="text-align: left">
-                        <img id="newsPhoto" name="newsPhoto" src="{% static 'images/caseshow/' %}11.jpg" width="300" height="300"/>
+                        <img id="newsPhoto" name="newsPhoto" src="{% static 'images/blank.png' %}" width="300" height="300"/>
 
                     </td>
                 </tr>
