--- a/templates/admins/caseDemo/add.html
+++ b/templates/admins/caseDemo/add.html
@@ -37,7 +37,8 @@
 
                 <tr>
                     <td style="text-align: right" colspan="2">
-                        <input type="submit" value="保存">
+{#                        <input type="submit" value="保存">#}
+                        <input type="button" value="保存" onclick="checkImg();">
                         <input type="button" value="取消" onclick="javascript:window.history.back(-1);">
                     </td>
                 </tr>
